Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2191

when http_info enabled, the http_sm may be deleted but a event associated it not cancelled.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • HTTP
    • None

    Description

      if the http_info enabled, when the sm_list`s lock not acquired but the client_vc`s timeout event triggered, the race may lead ts crash.

      Attachments

        1. TS-2191.wj.diff
          0.9 kB
          Wei Jin

        Issue Links

          Activity

            People

              weijin Wei Jin
              weijin Wei Jin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: