TS-2191 we should not simply reschdule the http_sm if the sm_list`s mutex is not acquired, because the client_vc`s timeout events maybe triggered. The race may lead http_sm received a event after it is deleted. Sub task (TS-2192)